--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection" : "Data Source=D:\\dotnet\\WebApp\\API\\dating.db"
-  }
+  },
+  "TokenKey" : "super secret key super secret key super secret key super secret key super secret key"
 }
